--- a/src/views/movimentacoes.ejs
+++ b/src/views/movimentacoes.ejs
@@ -60,8 +60,12 @@
           <label for="rca">RCA</label>
           <input type="text" id="rca" name="rca">
         </div>
-      </div>
+        <div class="form-group">
+        <label for="total_parcelas">Nº de Parcelas</label>
+        <input type="number" id="total_parcelas" name="total_parcelas" min="1" value="1">
     </div>
+    </div>
+</div>
 
     <div class="form-row">
       <div class="form-group">
