NOVA ATUALIZAÇÃO FORNECEDORES

--- a/src/views/fornecedores.ejs
+++ b/src/views/fornecedores.ejs
@@ -53,14 +53,13 @@
   <h2>📋 Fornecedores Cadastrados</h2>
   <table class="table">
     <thead>
-      <tr>
-        <th>Código</th>
-        <th>Nome</th>
-        <th>Contato</th>
-        <th>Telefone</th>
-        <th>E-mail</th>
-      </tr>
-    </thead>
+  <tr>
+    <th>Código</th>
+    <th>Nome</th>
+    <th>Contato</th>
+    <th>Telefone</th>
+    <th>E-mail</th> <th>Ações</th>  </tr>
+</thead>
     <tbody>
       <% fornecedores.forEach(f => { %>
         <tr>
