--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -32,7 +32,7 @@
         <a href="/">📊 Dashboard</a>
         <a href="/movimentacoes">📦 Movimentações</a>
         <a href="/clientes">👤 Clientes</a>
-        <a href="/rca">📈 RCA</a> 
+        <a href="/rcas">📈 RCAs</a>
         <a href="/fornecedores">🏭 Fornecedores</a>
         <a href="/financeiro">💰 Financeiro</a>
         <a href="/gerenciar/produtos">⚙️ Gerenciar</a>
