--- a/src/views/rcas.ejs
+++ b/src/views/rcas.ejs
@@ -13,8 +13,8 @@
         <input type="text" id="nome" name="nome" required>
       </div>
       <div class="form-group">
-        <label for="codigo">Código</label>
-        <input type="text" id="codigo" name="codigo">
+        <label for="cpf">CPF</label>
+        <input type="text" id="cpf" name="cpf">
       </div>
     </div>
     <div class="form-row">
@@ -22,14 +22,24 @@
         <label for="praca">Praça (Cidade/Região)</label>
         <input type="text" id="praca" name="praca">
       </div>
-      <div class="form-group">
-        <label for="telefone">Telefone</label>
-        <input type="text" id="telefone" name="telefone">
+       <div class="form-group">
+        <label for="cep">CEP</label>
+        <input type="text" id="cep" name="cep">
       </div>
     </div>
     <div class="form-group">
-      <label for="email">E-mail</label>
-      <input type="email" id="email" name="email">
+      <label for="endereco">Endereço</label>
+      <input type="text" id="endereco" name="endereco">
+    </div>
+     <div class="form-row">
+        <div class="form-group">
+            <label for="telefone">Telefone</label>
+            <input type="text" id="telefone" name="telefone">
+        </div>
+        <div class="form-group">
+            <label for="email">E-mail</label>
+            <input type="email" id="email" name="email">
+        </div>
     </div>
     <div class="form-group">
       <label for="observacao">Observações</label>
@@ -45,8 +55,8 @@
     <thead>
       <tr>
         <th>Nome</th>
-        <th>Código</th>
         <th>Praça</th>
+        <th>CPF</th>
         <th>Telefone</th>
         <th>E-mail</th>
       </tr>
@@ -55,8 +65,8 @@
       <% rcas.forEach(rca => { %>
         <tr>
           <td><strong><%= rca.nome %></strong></td>
-          <td><%= rca.codigo || '-' %></td>
           <td><%= rca.praca || '-' %></td>
+          <td><%= rca.cpf || '-' %></td>
           <td><%= rca.telefone || '-' %></td>
           <td><%= rca.email || '-' %></td>
         </tr>
