Nova Rota Dashboard e Produtos

--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -30,6 +30,7 @@
     <% if (locals.user) { %>
       <div class="nav">
         <a href="/">📊 Dashboard</a>
+        <a href="/produtos">📦 Produtos</a>
         <a href="/movimentacoes">📦 Movimentações</a>
         <a href="/clientes">👤 Clientes</a>
         <a href="/rcas">📈 RCAs</a>
